platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_51.platter
piece of x = 5 y;
start(){
    serve x;
}